# dragon-openlg

./: README.md  Texture.cpp  Texture.h  glm.cpp  main.cpp  meson.build
assets/models3d/: Escenario.mtl
modelos/: body.tga  textura.tga
src/: glm.cpp  main.cpp  stdafx.h  texture.cpp  texture.h
src/assets/models3d/: cielo.mtl
